--- a/src/main/resources/templates/listMovies.html
+++ b/src/main/resources/templates/listMovies.html
@@ -14,45 +14,28 @@
 </header>
 </head>
 <body>
-    
-    
-   
-
     <div class="container">
-
-        
-
-
-
-
-
-
         <div class="row">
           <div class="col-12">
               <table class="table table-image"  th:each="movie:${movies}" id="tabla" th:object="${movie}">
                 <thead>
                   <tr>
-                   
                     <th scope="col">id</th>
                     <th scope="col">title</th>
-                    <th scope="col">year</th>
                     <th scope="col">poster</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    
                     <td th:text="*{id}"></td>
-                   
-                    <td th:text="*{title}"></td>
-                    <td th:text="*{year}"></td>
-                    
+                    <td th:href="@{/moviess/*{id}}">
+                        <a th:href="@{|/moviess/*{id}|}" th:text="*{title}"></a>
+                    </td>
                     <td class="w-25">
                         <img class="info" th:src="@{|/img/*{poster}|}" /> 
                     </td>
                   </tr>
-                 
-                </tbody>
+                 </tbody>
               </table>   
           </div>
         </div>
