--- a/src/main/resources/templates/listMovies.html
+++ b/src/main/resources/templates/listMovies.html
@@ -14,6 +14,23 @@
 </header>
 </head>
 <body>
+    <script>
+       
+
+
+
+
+
+
+    </script>
+
+
+
+
+
+
+
+
     <div class="container">
         <div class="row">
           <div class="col-12">
@@ -23,14 +40,19 @@
                     <th scope="col">id</th>
                     <th scope="col">title</th>
                     <th scope="col">poster</th>
+
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
+                   
+
                     <td th:text="*{id}"></td>
                     <td th:href="@{/moviess/*{id}}">
                         <a th:href="@{|/moviess/*{id}|}" th:text="*{title}"></a>
+                        <div th:text="*{year} == 2020 ? 'novedad'">novedad 2020</div>
                     </td>
+                    
                     <td class="w-25">
                         <img class="info" th:src="@{|/img/*{poster}|}" /> 
                     </td>
